k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: lab09
  labels:
    app.kubernetes.io/name: lab09
