k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-info-deployment
  namespace: lab09
  labels:
    app: devops-info-service
    app.kubernetes.io/name: devops-info-service
    app.kubernetes.io/component: api
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: devops-info-service
  template:
    metadata:
      annotations:
        rollout-demo: "v2"
      labels:
        app: devops-info-service
        app.kubernetes.io/name: devops-info-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: devops-info-service
          image: pakmengamer/devops-info-service:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
