k8s/service-app2.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-demo-service
  namespace: lab09
  labels:
    app: hello-demo
spec:
  type: ClusterIP
  selector:
    app: hello-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
